app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stats-k8s
spec:
  selector:
    matchLabels:
      app: stats
  replicas: 4
  template:
    metadata:
      labels:
        app: stats
    spec:
      containers:
      - name: stats
        imagePullPolicy: Always
        image: janotijr/devops-project-1:latest
        ports:
        - containerPort: 5000
